--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ body {
     align-items: center;
     padding-left: 1rem;
 }
+.cellprop-actions-cont > *:hover {
+    cursor: pointer;
+}
 .cellprop-actions-cont > * {
     display: inline-block;
     margin-right: 1rem;
@@ -154,4 +157,17 @@ body {
     width: 5rem;
     border: 1px solid #dfe4ea;
     outline: none;
+}
+
+.color-prop {
+    position: relative;
+}
+
+.color-prop > input {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
 }
