--- a/style.css
+++ b/style.css
@@ -86,19 +86,38 @@ body {
 #sheet-add-icon {
     width: 2vw;
 }
+#sheet-add-icon:hover {
+    cursor: pointer;
+}
 #sheets-folder {
     display: flex;
     align-items: center;
     width: 5rem;
     width: calc( 100vw - 2vw);
     height: 80%;
+    overflow: auto;
 }
-#sheet-box {
+.sheet-folder {
+    height: 80%;
     text-decoration: underline;
     font-weight: bold;
     text-decoration-thickness: 3px;
     font-size: 0.9rem;
+    /* background-color: lightblue; */
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.sheet-content {
+    width: 5rem;
+    /* background-color: lightgreen; */
+}
+.sheet-content:hover {
+    cursor: pointer;
+}
+
 .grid-cont {
     height: calc( 100vh - 3rem - 3rem - 3rem - 2rem );
     position: relative;
